Add xaml composition implicit animations

--- a/samples/ControlCatalog/Pages/CompositionPage.axaml
+++ b/samples/ControlCatalog/Pages/CompositionPage.axaml
@@ -5,6 +5,18 @@
   <TabControl>
     <TabItem Header="Implicit animations">
       <StackPanel>
+        <StackPanel.Resources>
+          <ImplicitAnimationCollection x:Key="ImplAnimations">
+            <OffsetImplicitAnimation Duration="0:0:0.4">
+              <ExpressionKeyFrame NormalizedProgressKey="1.0" Value="this.FinalValue" />
+            </OffsetImplicitAnimation>
+          </ImplicitAnimationCollection>
+        </StackPanel.Resources>
+        <StackPanel.Styles>
+          <Style Selector="ItemsControl ContentPresenter">
+            <Setter Property="CompositionAnimation.ImplictionAnimations" Value="{DynamicResource ImplAnimations}"/>
+          </Style>
+        </StackPanel.Styles>
         <Grid ColumnDefinitions="*,10,40" Margin="0 0 40 0">
           <ItemsControl x:Name="Items">
             <ItemsControl.ItemsPanel>
@@ -14,7 +26,7 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.DataTemplates>
               <DataTemplate DataType="pages:CompositionPageColorItem">
-                <Border 
+                <Border
                   pages:CompositionPage.EnableAnimations="True"
                   Padding="10" BorderBrush="Gray" BorderThickness="2"
                   Background="{Binding ColorBrush}" Width="100" Height="100" Margin="10">
