--- a/src/Avalonia.Themes.Fluent/Accents/BaseResources.xaml
+++ b/src/Avalonia.Themes.Fluent/Accents/BaseResources.xaml
@@ -54,6 +54,12 @@
   <!-- Moved from Menu.xaml -->
   <Thickness x:Key="MenuBarItemPadding">12,0,12,0</Thickness>
   
+  <ImplicitAnimationCollection x:Key="ThumbOffsetAnimation">
+    <OffsetImplicitAnimation Duration="0:0:0.15">
+      <ExpressionKeyFrame NormalizedProgressKey="1.0" Value="this.FinalValue" />
+    </OffsetImplicitAnimation>
+  </ImplicitAnimationCollection>
+  
   <ResourceDictionary.ThemeDictionaries>
     <ResourceDictionary x:Key="Default">
       <SolidColorBrush x:Key="SystemControlBackgroundAccentBrush" Color="{DynamicResource SystemAccentColor}" />
